fix word wrap issue

--- a/src/components/EpisodeList/Episode.module.css
+++ b/src/components/EpisodeList/Episode.module.css
@@ -60,6 +60,7 @@
   font-size: var(--font-size-s);
   margin: 0;
   overflow: hidden;
+  word-break: break-all;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
